--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+astmanproxy (1.23.2) unstable; urgency=low
+
+  * Improved I/O for very busy systems.
+  * Massive performance boost - No need to bzero quite so much.
+  * Clean out server buffers before re-opening.
+  * Shutdown tries to nicely clean up threads.
+  * New forcebanner option to set the initial banner output.
+  * Attempt to handle quoted values in config file.
+  * Matching on context is now correctly case-sensitive.
+
+ -- Steve Davies <steved@ipcortex.co.uk>  Tue, 24 May 2011 12:32:22 +0100
+
 astmanproxy (1.23.1) unstable; urgency=low
 
   * Segfault fix in standard.so
