Many fixes and changes rolled in from non-version controll source:   * Change sessionlock from MUTEX to RWLOCK.   * Add several RDLOCK cases to prevent segfaults on connection close.   * Include latest "Newstate" with packet replay code.   * Fix autofilter option for ActionID filtering.   * Fix replay filtering. Dial cmd seems to have changed.   * Fix buffer code to handle v.v.v.long lines on input.   * Additional bounds checking on MAX_HEADERS to try and     catch a core dump.   * New FILT_BRIONLY and FILT_XFRONLY rules   * Clean up server connection buffer before trying     to connect.   * Cancel threads before cleaning up their memory.   * Increase the input buffer and optimise how the buffer is managed   * Very busy systems can get backlogged on read buffers     Try to resolve this by polling for new data on every read.

--- a/README
+++ b/README
@@ -250,7 +250,9 @@ of non-filterable events to all clients. The default behaviour is to
 block these packets if any form of filtering is requested.
 
 Filters is a pipe-separated list of extra filter options. At present the following values have meaning:
-	cdronly - Only pass Event: CDR records to this client. All other filters are ignored
+	cdronly - Only pass Event: CDR records to this client. Other ???only filters are allowed.
+	brionly - Only pass Event: Bridge events to this client. Other ???only filters are allowed.
+	xfronly - Only pass Event: Transfer events to this client. Other ???only filters are allowed.
 	novar - Pre-pass filter removes all SetVar/VarSet events
 
 user=secret,channel,out_context (to Asterisk),in_context (From Asterisk),accountcode,server,more_events,filters
